--- a/style.css
+++ b/style.css
@@ -238,13 +238,29 @@ body.light-theme {
   justify-content: space-between;
   align-items: center;
 }
-
+.logo {
+  height: 44px;
+  width: 44px;
+}
+.logo__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.logo__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
 .nav__logo {
   color: var(--first-color);
   font-weight: var(--font-medium);
   transition: 0.4s;
 }
-
+.d {
+  color: rgb(197, 135, 2);
+}
 .nav__logo:hover {
   color: var(--first-color-alt);
 }
@@ -276,7 +292,6 @@ body.light-theme {
   display: flex;
   border-radius: 5rem;
 }
-
 /* Active link */
 .active-link {
   background: linear-gradient(
@@ -329,7 +344,10 @@ body.light-theme {
 }
 
 .home__img {
-  width: 160px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+
 }
 
 .home__handle {
